# plyr

./: CMakeLists.txt  LICENSE  README.md  app.rc  check_file.c  config.h.in  imgui.ini  test_mp3.c
cmake/: Dependencies.cmake
include/: app.hpp  entities.hpp  glprogram.hpp  glshader.hpp  iphysicsservice.hpp  vertexarray.hpp
resources/: app.rc
src/: app-infra.cpp  app.cpp  audio_sdl.c  audio_sdl.h  check_after_id3.c  decode.c  decode.h  default-icons.cpp  make_base64_image_header.cpp  program.cpp  vertexarray.cpp
src/services/: physicsservice.cpp  physicsservice.hpp
